# ros2_yolov8

./: .gitignore
src/aruco_detection_pkg/: package.xml  setup.cfg  setup.py
src/aruco_detection_pkg/aruco_detection_pkg/: aruco_detection_node.py
src/camera_pkg/camera_pkg/: camera_node.py
src/face_detect/: CMakeLists.txt  package.xml  setup.py
src/face_detect/face_detect/: face_node.py
src/yolo_msgs/: CMakeLists.txt  package.xml
src/yolo_msgs/msg/: Detection.msg
src/yolo_pkg/: CMakeLists.txt  setup.py
src/yolo_pkg/resource/: ost.yaml
src/yolo_pkg/yolo_pkg/: camera_test.py  compress.py  compressed.py  imu_test.py  pokemon_node.py
